--- a/async-race/src/components/carPropsInput/carPropsInput.scss
+++ b/async-race/src/components/carPropsInput/carPropsInput.scss
@@ -14,11 +14,19 @@
     flex-grow: 1;
     color: $color-neutral-0;
     background: $color-neutral-100;
+    &:disabled {
+      color: $color-neutral-100;
+      background: $color-disable;
+    }
   }
   &__color {
     border: solid 2px $color-primary;
     &:hover {
       cursor: pointer;
+    }
+    &:disabled {
+      cursor: inherit;
+      border: solid 2px $color-disable;
     }
   }
 }
