fix: overlay filters

--- a/async-race/src/components/carView34/carView34.scss
+++ b/async-race/src/components/carView34/carView34.scss
@@ -3,6 +3,7 @@
 .car-view-34 {
   margin-bottom: 32px;
   &__grey{
+    display: flex;
     background: url('../../assets/car34grey.png') 0 100%/contain no-repeat;
   }
 }
