--- a/async-race/src/components/winnerLine/winnerLine.scss
+++ b/async-race/src/components/winnerLine/winnerLine.scss
@@ -28,6 +28,8 @@
     }
     &_wins {
       width: 96px;
+      margin-right: 16px;
+      text-align: center;
     }
     &_time {
       width: 128px;
