--- a/async-race/src/components/trackLine/trackLine.scss
+++ b/async-race/src/components/trackLine/trackLine.scss
@@ -7,12 +7,20 @@
   border-bottom: solid 2px $color-neutral-100;
   height: 48px;
   &__car {
+    z-index: 1;
     display: flex;
     position: absolute;
     left: 8px;
     background: url('../../assets/carTopGrey.png') 0 100%/contain no-repeat;
+
+    transition: transform 1s;
     &.drive {
       background: url('../../assets/carTopGrey.png') 0 100%/contain no-repeat, url('../../assets/carLight.png') 0 0/100% 100% no-repeat;
+    }
+    &.engine-broken {
+      transform: rotate(10deg) translate(40px);
+      background: url('../../assets/smoke2.gif') 70%/ 32px no-repeat, url('../../assets/carTopGrey.png') 0 100%/contain no-repeat;
+      background-blend-mode: screen, normal;
     }
   }
   
