fix: corrections according to Maksim Rynkov comments 07.08.2023

--- a/async-race/src/components/carView/carView.scss
+++ b/async-race/src/components/carView/carView.scss
@@ -1,5 +1,13 @@
 @import "../../styles/tokens.scss";
 
+.car-view-34 {
+  margin-bottom: 32px;
+  &__grey{
+    display: flex;
+    background: url('../../assets/car34grey.png') 0 100%/contain no-repeat;
+  }
+}
+
 .car-view-front {
   position: relative;
   transform-style: preserve-3d;
